crates/rome_cli/tests/snapshots/main_ci/ci_parse_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
if

```

# Termination Message

```block
errors where emitted while running checks
```

# Emitted Messages

```block
error[SyntaxError]: expected `(` but instead the file ends
  ┌─ ci.js:2:1
  │
2 │ 
  │ ^ the file ends here


```


